mssdemux: fix caps leak in error code path

https://bugzilla.gnome.org/show_bug.cgi?id=787736